--- a/lwjgl-platform/build.gradle
+++ b/lwjgl-platform/build.gradle
@@ -31,7 +31,7 @@ sourceSets {
 }
 
 tasks.register("linuxNativeJar", Jar) {
-    dependsOn ":compile"
+    dependsOn ":lwjgl-templates:generateAll", ":compile"
     from fileTree("../bin/lwjgl") {
         include "liblwjgl*.so"
     }
@@ -44,7 +44,7 @@ tasks.register("linuxNativeJar", Jar) {
 }
 
 tasks.register("macosxNativeJar", Jar) {
-    dependsOn ":compile"
+    dependsOn ":lwjgl-templates:generateAll", ":compile"
     from fileTree("../bin/lwjgl") {
         include "liblwjgl*.dylib"
     }
@@ -57,7 +57,7 @@ tasks.register("macosxNativeJar", Jar) {
 }
 
 tasks.register("windowsNativeJar", Jar) {
-    dependsOn ":compile"
+    dependsOn ":lwjgl-templates:generateAll", ":compile"
     from fileTree("../bin/lwjgl") {
         include "lwjgl*.dll"
     }
