--- a/lwjgl-common/build.gradle
+++ b/lwjgl-common/build.gradle
@@ -1,3 +1,7 @@
 plugins {
     id "java"
 }
+
+compileJava {
+    options.getHeaderOutputDirectory().set(file("../lwjgl-platform/src/generated/c/"))
+}
