--- a/gradle/compile.gradle
+++ b/gradle/compile.gradle
@@ -56,7 +56,7 @@ def ENV = System.getenv()
 
 tasks.register("compile_native") {
     description = "Compiles the native files"
-    dependsOn ":lwjgl:compileJava", "touch-version", "a-version-mismatch"
+    dependsOn "-initialize", ":lwjgl:compileJava", "touch-version", "a-version-mismatch"
 
     if (Os.isFamily(Os.FAMILY_WINDOWS)) {
         dependsOn "link_win32"
